Update burpsuite-launcher.sh