@@ -1,16 +1,17 @@
 #!/bin/bash
 
+
 pw=$(pwd) 
 loader=$(ls|grep -i loader)
 burp=$(ls|grep -i pro)
 
-if [ whoami == root ] 
-then
-echo "java --illegal-access=permit -Dfile.encoding=utf-8 -javaagent:$pw/$loader -noverify -jar $pw/$burp" >  /usr/bin/burp
+
+
+dir="java  -Dfile.encoding=utf-8 -javaagent:$pw/$loader -noverify -jar $pw/$burp" 
 echo '[Desktop Entry]
 Name=Burpsuite
 Encoding=UTF-8
-Exec="/usr/bin/burp" %u
+Exec=sh -c "'"$dir"'" %u
 Icon=burp
 StartupNotify=false
 Terminal=false
@@ -19,21 +20,4 @@ Categories=03-webapp-analysis;03-06-web-application-proxies;
 X-Kali-Package=burpsuite
 StartupWMClass=burp-StartBurp' > ~/.local/share/applications/kali-burpsuite.desktop
 
-else
-
-echo "java --illegal-access=permit -Dfile.encoding=utf-8 -javaagent:$pw/$loader -noverify -jar $pw/$burp" >  ~/.config/burp
-dir=($HOME/.config/burp)
-chmod 777 $dir
-echo '[Desktop Entry]
-Name=Burpsuite
-Encoding=UTF-8
-Exec="'"$dir"'" %u
-Icon=burp
-StartupNotify=false
-Terminal=false
-Type=Application
-Categories=03-webapp-analysis;03-06-web-application-proxies;
-X-Kali-Package=burpsuite
-StartupWMClass=burp-StartBurp' > ~/.local/share/applications/kali-burpsuite.desktop
-
-fi
+echo -e "Launcher is set \n Just rock !! ~~~~~~~~~~~~~~~~"
